fixed margin-top & alignment for about page

--- a/themes/holycupcakes/style.css
+++ b/themes/holycupcakes/style.css
@@ -205,7 +205,8 @@ footer .button.primary:focus {
 } */
 
 .alignfull {
-    margin: 32px calc(50% - 50vw);
+    margin-left: calc(50% - 50vw);
+	margin-right: calc(50% - 50vw);
     max-width: 100vw;
     width: 100vw;
 }
@@ -370,7 +371,10 @@ span input,
 .middleAbout {
     background-color: #f9f6ec;
 }
-
+.wp-block-group__inner-container{
+    width: 75%;
+    margin: 0 auto;
+}
 /* ******************** Colour Settings ******************** */
 .has-lightcream-color {
     color: #F9F6EC;
